Integration tests
Integration tests, separated into game integration tests and user game integration tests. Covers functionality from the games and user-games pages with a mock database.